--- a/miniapps/gestor-de-tarefas/app.html
+++ b/miniapps/gestor-de-tarefas/app.html
@@ -1,16 +1,16 @@
 <section data-miniapp="gestor-de-tarefas" class="u-card u-col u-gap-4">
   <header class="u-col u-gap-2">
-    <h2>{{ t('miniapps.gestor_tarefas.titulo') }}</h2>
+    <h2>{{ t('miniapps.gestor-de-tarefas.titulo') }}</h2>
     <div class="u-row u-gap-2">
-      <button class="c-btn c-btn--primary" data-action="add-row">{{ t('miniapps.gestor_tarefas.tabela.novo') }}</button>
+      <button class="c-btn c-btn--primary" data-action="add-row">{{ t('miniapps.gestor-de-tarefas.tabela.novo') }}</button>
     </div>
   </header>
   <div class="u-scroll-x">
     <table class="u-table">
       <thead>
         <tr>
-          <th>{{ t('miniapps.gestor_tarefas.tabela.tarefa') }}</th>
-          <th>{{ t('miniapps.gestor_tarefas.tabela.status') }}</th>
+          <th>{{ t('miniapps.gestor-de-tarefas.tabela.tarefa') }}</th>
+          <th>{{ t('miniapps.gestor-de-tarefas.tabela.status') }}</th>
           <th></th>
         </tr>
       </thead>
